# DevOps

./: .gitignore  README.md  docker-compose.yaml
dagster/: Dockerfile  dagster-pod.yaml  pyproject.toml
dagster/TradeOpsDE/: README.md  pyproject.toml  setup.cfg  setup.py  workspace.yaml
dagster/TradeOpsDE/TradeOpsDE/: assets.py
