[tool.poetry]
name = "tradeops-de"
version = "0.1.0"
description = ""
authors = ["orson88"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
dagster = "^1.6.8"
dagster-webserver = "^1.6.8"
pandas = "^2.2.1"
yfinance = "^0.2.37"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
